@@ -2,12 +2,12 @@ package com.powersphere.organization.service.impl;
 
 import com.powersphere.organization.dto.request.OrganizationRequest;
 import com.powersphere.organization.dto.response.OrganizationResponse;
+import com.powersphere.organization.entity.Organization;
 import com.powersphere.organization.exception.DuplicateOrganizationException;
 import com.powersphere.organization.exception.OrganizationNotFoundException;
 import com.powersphere.organization.mapper.OrganizationMapper;
 import com.powersphere.organization.repository.OrganizationRepository;
 import com.powersphere.organization.service.OrganizationService;
-import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -15,9 +15,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
+@Transactional
 public class OrganizationServiceImpl implements OrganizationService {
 
     private static final Logger log = LoggerFactory.getLogger(OrganizationServiceImpl.class);
@@ -25,47 +26,66 @@ public class OrganizationServiceImpl implements OrganizationService {
     private final OrganizationRepository organizationRepository;
     private final OrganizationMapper organizationMapper;
 
+    public OrganizationServiceImpl(OrganizationRepository organizationRepository,
+                                   OrganizationMapper organizationMapper) {
+        this.organizationRepository = organizationRepository;
+        this.organizationMapper = organizationMapper;
+    }
+
     @Override
-    @Transactional
     public OrganizationResponse createOrganization(OrganizationRequest request) {
-        log.debug("Creating organization with code: {}", request.getOrganizationCode());
+        log.info("Creating organization with code: {}", request.getOrganizationCode());
 
         if (organizationRepository.existsByOrganizationCode(request.getOrganizationCode())) {
             throw new DuplicateOrganizationException(
                     "Organization with code '" + request.getOrganizationCode() + "' already exists");
         }
 
-        var organization = organizationMapper.toEntity(request);
-        organization = organizationRepository.save(organization);
-        log.info("Organization created successfully with id: {}", organization.getId());
-        return organizationMapper.toResponse(organization);
+        Organization organization = organizationMapper.toEntity(request);
+
+        if (organization.getStatus() == null) {
+            organization.setStatus("ACTIVE");
+        }
+
+        Organization savedOrganization = organizationRepository.save(organization);
+        log.info("Organization created with id: {}", savedOrganization.getId());
+
+        return organizationMapper.toResponse(savedOrganization);
     }
 
     @Override
-    @Transactional
     public OrganizationResponse updateOrganization(UUID id, OrganizationRequest request) {
-        log.debug("Updating organization with id: {}", id);
+        log.info("Updating organization with id: {}", id);
 
-        var organization = organizationRepository.findById(id)
-                .orElseThrow(() -> new OrganizationNotFoundException("Organization not found with id: " + id));
+        Organization organization = organizationRepository.findById(id)
+                .orElseThrow(() -> new OrganizationNotFoundException(
+                        "Organization not found with id: " + id));
+
+        if (!organization.getOrganizationCode().equals(request.getOrganizationCode())
+                && organizationRepository.existsByOrganizationCode(request.getOrganizationCode())) {
+            throw new DuplicateOrganizationException(
+                    "Organization with code '" + request.getOrganizationCode() + "' already exists");
+        }
 
         organizationMapper.updateEntity(organization, request);
-        organization = organizationRepository.save(organization);
-        log.info("Organization updated successfully with id: {}", id);
-        return organizationMapper.toResponse(organization);
+        Organization updatedOrganization = organizationRepository.save(organization);
+        log.info("Organization updated with id: {}", updatedOrganization.getId());
+
+        return organizationMapper.toResponse(updatedOrganization);
     }
 
     @Override
     @Transactional
     public void deleteOrganization(UUID id) {
-        log.debug("Deleting organization with id: {}", id);
+        log.info("Deleting organization with id: {}", id);
 
-        var organization = organizationRepository.findById(id)
-                .orElseThrow(() -> new OrganizationNotFoundException("Organization not found with id: " + id));
+        Organization organization = organizationRepository.findById(id)
+                .orElseThrow(() -> new OrganizationNotFoundException(
+                        "Organization not found with id: " + id));
 
         organization.setIsActive(false);
         organizationRepository.save(organization);
-        log.info("Organization soft-deleted successfully with id: {}", id);
+        log.info("Organization soft-deleted with id: {}", id);
     }
 
     @Override
@@ -73,8 +93,9 @@ public class OrganizationServiceImpl implements OrganizationService {
     public OrganizationResponse getOrganizationById(UUID id) {
         log.debug("Fetching organization by id: {}", id);
 
-        var organization = organizationRepository.findById(id)
-                .orElseThrow(() -> new OrganizationNotFoundException("Organization not found with id: " + id));
+        Organization organization = organizationRepository.findById(id)
+                .orElseThrow(() -> new OrganizationNotFoundException(
+                        "Organization not found with id: " + id));
 
         return organizationMapper.toResponse(organization);
     }
@@ -82,23 +103,21 @@ public class OrganizationServiceImpl implements OrganizationService {
     @Override
     @Transactional(readOnly = true)
     public List<OrganizationResponse> getAllOrganizations() {
-        log.debug("Fetching all active organizations");
+        log.debug("Fetching all organizations");
 
-        return organizationRepository.findByIsActiveTrue()
-                .stream()
+        return organizationRepository.findByIsActiveTrue().stream()
                 .map(organizationMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<OrganizationResponse> searchOrganizations(String searchTerm) {
-        log.debug("Searching organizations with term: {}", searchTerm);
+    public List<OrganizationResponse> searchOrganizations(String name) {
+        log.debug("Searching organizations by name: {}", name);
 
-        return organizationRepository.findByOrganizationNameContainingIgnoreCase(searchTerm)
-                .stream()
+        return organizationRepository.findByOrganizationNameContainingIgnoreCase(name).stream()
                 .map(organizationMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -106,9 +125,8 @@ public class OrganizationServiceImpl implements OrganizationService {
     public List<OrganizationResponse> getOrganizationsByStatus(String status) {
         log.debug("Fetching organizations by status: {}", status);
 
-        return organizationRepository.findByStatus(status)
-                .stream()
+        return organizationRepository.findByStatus(status).stream()
                 .map(organizationMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
