@@ -2,6 +2,8 @@ package com.powersphere.organization.service.impl;
 
 import com.powersphere.organization.dto.request.TeamRequest;
 import com.powersphere.organization.dto.response.TeamResponse;
+import com.powersphere.organization.entity.Department;
+import com.powersphere.organization.entity.Team;
 import com.powersphere.organization.exception.DepartmentNotFoundException;
 import com.powersphere.organization.exception.DuplicateTeamException;
 import com.powersphere.organization.exception.TeamNotFoundException;
@@ -9,7 +11,6 @@ import com.powersphere.organization.mapper.TeamMapper;
 import com.powersphere.organization.repository.DepartmentRepository;
 import com.powersphere.organization.repository.TeamRepository;
 import com.powersphere.organization.service.TeamService;
-import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -17,9 +18,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
+@Transactional
 public class TeamServiceImpl implements TeamService {
 
     private static final Logger log = LoggerFactory.getLogger(TeamServiceImpl.class);
@@ -28,50 +30,78 @@ public class TeamServiceImpl implements TeamService {
     private final DepartmentRepository departmentRepository;
     private final TeamMapper teamMapper;
 
-    @Override
-    @Transactional
-    public TeamResponse createTeam(UUID departmentId, TeamRequest request) {
-        log.debug("Creating team with code: {} in department: {}", request.getCode(), departmentId);
-
-        var department = departmentRepository.findById(departmentId)
-                .orElseThrow(() -> new DepartmentNotFoundException("Department not found with id: " + departmentId));
-
-        if (teamRepository.existsByCode(request.getCode())) {
-            throw new DuplicateTeamException("Team with code '" + request.getCode() + "' already exists");
-        }
-
-        var team = teamMapper.toEntity(request);
-        team.setDepartment(department);
-        team = teamRepository.save(team);
-        log.info("Team created successfully with id: {}", team.getId());
-        return teamMapper.toResponse(team);
+    public TeamServiceImpl(TeamRepository teamRepository,
+                           DepartmentRepository departmentRepository,
+                           TeamMapper teamMapper) {
+        this.teamRepository = teamRepository;
+        this.departmentRepository = departmentRepository;
+        this.teamMapper = teamMapper;
     }
 
     @Override
-    @Transactional
-    public TeamResponse updateTeam(UUID id, TeamRequest request) {
-        log.debug("Updating team with id: {}", id);
+    public TeamResponse createTeam(TeamRequest request) {
+        log.info("Creating team with code: {} in department: {}", request.getCode(), request.getDepartmentId());
 
-        var team = teamRepository.findById(id)
-                .orElseThrow(() -> new TeamNotFoundException("Team not found with id: " + id));
+        if (teamRepository.existsByCode(request.getCode())) {
+            throw new DuplicateTeamException(
+                    "Team with code '" + request.getCode() + "' already exists");
+        }
+
+        Department department = departmentRepository.findById(request.getDepartmentId())
+                .orElseThrow(() -> new DepartmentNotFoundException(
+                        "Department not found with id: " + request.getDepartmentId()));
+
+        Team team = teamMapper.toEntity(request);
+        team.setDepartment(department);
+
+        Team savedTeam = teamRepository.save(team);
+        log.info("Team created with id: {}", savedTeam.getId());
+
+        return teamMapper.toResponse(savedTeam);
+    }
+
+    @Override
+    public TeamResponse updateTeam(UUID id, TeamRequest request) {
+        log.info("Updating team with id: {}", id);
+
+        Team team = teamRepository.findById(id)
+                .orElseThrow(() -> new TeamNotFoundException(
+                        "Team not found with id: " + id));
+
+        if (!team.getCode().equals(request.getCode())
+                && teamRepository.existsByCode(request.getCode())) {
+            throw new DuplicateTeamException(
+                    "Team with code '" + request.getCode() + "' already exists");
+        }
+
+        if (request.getDepartmentId() != null
+                && (team.getDepartment() == null
+                || !team.getDepartment().getId().equals(request.getDepartmentId()))) {
+            Department department = departmentRepository.findById(request.getDepartmentId())
+                    .orElseThrow(() -> new DepartmentNotFoundException(
+                            "Department not found with id: " + request.getDepartmentId()));
+            team.setDepartment(department);
+        }
 
         teamMapper.updateEntity(team, request);
-        team = teamRepository.save(team);
-        log.info("Team updated successfully with id: {}", id);
-        return teamMapper.toResponse(team);
+        Team updatedTeam = teamRepository.save(team);
+        log.info("Team updated with id: {}", updatedTeam.getId());
+
+        return teamMapper.toResponse(updatedTeam);
     }
 
     @Override
     @Transactional
     public void deleteTeam(UUID id) {
-        log.debug("Deleting team with id: {}", id);
+        log.info("Deleting team with id: {}", id);
 
-        var team = teamRepository.findById(id)
-                .orElseThrow(() -> new TeamNotFoundException("Team not found with id: " + id));
+        Team team = teamRepository.findById(id)
+                .orElseThrow(() -> new TeamNotFoundException(
+                        "Team not found with id: " + id));
 
         team.setIsActive(false);
         teamRepository.save(team);
-        log.info("Team soft-deleted successfully with id: {}", id);
+        log.info("Team soft-deleted with id: {}", id);
     }
 
     @Override
@@ -79,8 +109,9 @@ public class TeamServiceImpl implements TeamService {
     public TeamResponse getTeamById(UUID id) {
         log.debug("Fetching team by id: {}", id);
 
-        var team = teamRepository.findById(id)
-                .orElseThrow(() -> new TeamNotFoundException("Team not found with id: " + id));
+        Team team = teamRepository.findById(id)
+                .orElseThrow(() -> new TeamNotFoundException(
+                        "Team not found with id: " + id));
 
         return teamMapper.toResponse(team);
     }
@@ -90,9 +121,28 @@ public class TeamServiceImpl implements TeamService {
     public List<TeamResponse> getTeamsByDepartment(UUID departmentId) {
         log.debug("Fetching teams for department: {}", departmentId);
 
-        return teamRepository.findByDepartmentId(departmentId)
-                .stream()
+        return teamRepository.findByDepartmentIdAndIsActiveTrue(departmentId).stream()
                 .map(teamMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<TeamResponse> searchTeams(String name) {
+        log.debug("Searching teams by name: {}", name);
+
+        return teamRepository.findByNameContainingIgnoreCase(name).stream()
+                .map(teamMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<TeamResponse> getAllTeams() {
+        log.debug("Fetching all active teams");
+
+        return teamRepository.findByIsActiveTrue().stream()
+                .map(teamMapper::toResponse)
+                .collect(Collectors.toList());
     }
 }
